--- a/STUDENTAPI-SPRINGBOOT/bin/src/main/resources/application.properties
+++ b/STUDENTAPI-SPRINGBOOT/bin/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=STUDENTAPI-SPRINGBOOT
+spring.application.name=SpringBootProject
 server.port=2001
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb205
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb
 spring.datasource.username=root
-spring.datasource.password=159357
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
